# charter-parser

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
charter_parser/: __init__.py  main.py  state.py
charter_parser/pipeline/: assembler.py  enumerator.py  extractor.py  loader.py  sectioner.py
